apps/monitoring/ingress-ingest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mimir-ingest
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: ${default_cluster_issuer}
    external-dns.kubernetes.io/target: ${cloudflare_tunnel_hostname}
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-authelia-forwardauth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: metrics${public_host_suffix}.${delegating_domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mimir-gateway
                port:
                  number: 80
  tls:
    - secretName: mimir-ingest-tls
      hosts:
        - metrics${public_host_suffix}.${delegating_domain}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-ingest
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: ${default_cluster_issuer}
    external-dns.kubernetes.io/target: ${cloudflare_tunnel_hostname}
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-authelia-forwardauth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: logs${public_host_suffix}.${delegating_domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loki-gateway
                port:
                  number: 80
  tls:
    - secretName: loki-ingest-tls
      hosts:
        - logs${public_host_suffix}.${delegating_domain}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tempo-ingest
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: ${default_cluster_issuer}
    external-dns.kubernetes.io/target: ${cloudflare_tunnel_hostname}
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-authelia-forwardauth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: traces${public_host_suffix}.${delegating_domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tempo-distributor
                port:
                  number: 4318
  tls:
    - secretName: tempo-ingest-tls
      hosts:
        - traces${public_host_suffix}.${delegating_domain}
